# ferriscraft

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: atlas.ktx2
assets/shaders/: voxel.wgsl
client/: Cargo.toml
client/assets/shaders/: post_processing.wgsl
client/src/: main.rs  player.rs  ui.rs
client/src/multiplayer/: mod.rs
client/src/singleplayer/: mod.rs
client/src/world/: mesher.rs  mod.rs  systems.rs  utils.rs
server/: Cargo.toml
server/saves/: world.ferris
server/src/: events.rs  main.rs  utils.rs
src/: lib.rs  main.rs  mesher.rs  player.rs  post.rs  render_pipeline.rs  ui.rs  utils.rs  world.rs
src/multiplayer/: server.rs
src/multiplayer/client/: mod.rs
src/multiplayer/server/: main.rs
src/singleplayer/: mod.rs
src/world/: mesher.rs  mod.rs  systems.rs  utils.rs
