[package]
name = "ferriscraft"
version = "0.1.2"
edition = "2024"
default-run = "client"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher", "wayland"] }
bevy-inspector-egui = "0.33.1"
bevy-persistent = { version = "0.8.0", features = ["bincode"] }
bevy_framepace = "0.19.1"
bevy_renet = "2.0.0"
chrono = "0.4.41"
iyes_perf_ui = "0.5.0"
noiz = "0.2.0"
rand = "0.9.2"
rayon = "1.10.0"
serde = "1.0.219"
bincode = "1.3.3"
bevy_mod_billboard = { git = "https://github.com/mcobzarenco/bevy_mod_billboard", branch = "migrate-0.16" }

[[bin]]
name = "server"
path = "src/multiplayer/server/main.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[features]
default = []
profile = []
