[package]
name = "ferriscraft"
version = "0.1.2"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
serde = "1"
bincode = "1.3.3"
bevy_ecs = { version = "0.16.1", optional = true }
bevy_math = { workspace = true }
renet = { workspace = true }

[workspace]
resolver = "3"
members = ["server", "client"]

[workspace.dependencies]
bevy_math = { version = "0.16.1", features = ["std", "serialize"], default-features = false }
renet = "1.1.0"
chrono = "0.4.41"

[features]
default = []
client = ["dep:bevy_ecs", "renet/bevy"]
server = []
