[package]
name = "ferriscraft"
version = "0.1.3"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
bevy_math = { workspace = true }
renet = { workspace = true }
bevy_ecs = { version = "0.16.1", optional = true }
toml = "0.9.5"

[workspace]
resolver = "3"
members = ["client", "server"]

[workspace.dependencies]
serde = "1"
bincode = "1.3.3"
bevy_math = { version = "0.16.1", features = ["std", "serialize"], default-features = false }
renet = "1.1.0"
chrono = "0.4.41"
rand = "0.9.2"

[features]
default = []
client = ["dep:bevy_ecs", "renet/bevy"]
server = []
