[package]
name = "client"
version = "0.1.3"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher", "wayland"] }
bevy-inspector-egui = "0.33.1"
bevy-persistent = { version = "0.8.0", features = ["bincode"] }
bevy_framepace = "0.19.1"
bevy_renet = "2.0.0"
iyes_perf_ui = "0.5.0"
noiz = "0.2.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = "1.0.219"
bincode = "1.3.3"
bevy_mod_billboard = { git = "https://github.com/mcobzarenco/bevy_mod_billboard", branch = "migrate-0.16" }

chrono = { workspace = true }

ferriscraft = { path = "../", features = ["client"] }

[features]
default = []
profile = []