[package]
name = "server"
version = "0.1.3"
edition = "2024"

[dependencies]
serde = "1"
bincode = "1.3.3"
eframe = "0.32.0"
renet_netcode = "1.1.0"
rand = "0.9.2"

chrono = { workspace = true }
renet = { workspace = true }
bevy_math = { workspace = true }

ferriscraft = { path = "../", features = ["server"] }
