[package]
name = "server"
version = "0.1.3"
edition = "2024"

[dependencies]
eframe = "0.32.0"
renet_netcode = "1.1.0"

serde = { workspace = true }
bincode = { workspace = true }
bevy_math = { workspace = true }
renet = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

ferriscraft = { path = "../", features = ["server"] }
